styles.css
body, html {
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-color: #f0f0f0;
}

#gameTitle {
    font-size: 2.5em;
    color: #333;
    text-align: center;
    font-family: 'Arial', sans-serif;
    margin-bottom: 20px;
    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
}

#gameCanvas {
    width: 80%;
    height: 80vh;
    max-width: 800px;
    max-height: 800px;
    background-color: #000;
    border: 3px solid #333;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

#restartButton {
    display: none;
    padding: 10px 20px;
    font-size: 16px;
    background-color: #4caf50;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin: 20px;
}

#restartButton:hover {
    background-color: #45a049;
    transform: scale(1.05);
    font-weight: bold;
}

